--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.0",
   "description": "",
   "main": "app.js",
-
   "devDependencies": {
     "react-scripts": "0.7.0"
   },
-
   "dependencies": {
+    "jquery": "^3.2.1",
+    "mousetrap": "^1.6.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
