--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-calculator",
+  "homepage": "https://ajvarshneya.github.io/react-calculator",
   "version": "0.0.0",
   "description": "",
   "main": "app.js",
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
@@ -16,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   }
 }
